main page title update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><meta charset="UTF-8" /><title>React + Vite + Rails</title></head>
+  <head><meta charset="UTF-8" /><title>BuyBuy</title></head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
